--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,9 @@ button {
   text-decoration: none;
 }
 
-.page-header {
+/* --------------- HEADER-------------- */
+
+.header {
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid var(--accent);
@@ -77,12 +79,12 @@ button {
   align-items: center;
 }
 
-.page-navigation {
+.header-nav {
   display: flex;
   align-items: center;
 }
 
-.logotype {
+.header-logo {
   font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 18px;
@@ -93,27 +95,43 @@ button {
   margin-right: 76px;
 }
 
-.logotype .accent {
+.header-logo .accent {
   color: var(--dark);
 }
 
-.menu {
+.header-list {
   display: flex;
   gap: 40px;
 }
 
-.menu-link {
+.header-link {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--dark);
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0;
+  position: relative;
 }
 
-.menu-link:hover,
-.menu-link:focus {
+.header-link:hover,
+.header-link:focus {
   color: var(--ocean);
+}
+
+.header-link-active {
+  color: var(--ocean);
+}
+
+.header-link-active::after {
+  display: block;
+  content: '';
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--ocean);
+  position: absolute;
+  bottom: -1px;
+  left: 0;
 }
 
 .header-contacts {
@@ -137,6 +155,8 @@ button {
   color: var(--ocean);
 }
 
+/* --------------- HERO-------------- */
+
 .section {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -145,6 +165,16 @@ button {
 .hero-section {
   padding: 188px 0;
   background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -180,6 +210,8 @@ button {
   background-color: #404bbf;
 }
 
+/* --------------- ADVANTAGE-------------- */
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -198,8 +230,20 @@ button {
   gap: 24px;
 }
 
-.advantage {
+.advantage-link {
   width: calc((100% - 72px) / 4);
+}
+
+.advantage-svg-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  margin-bottom: 8px;
+  border-radius: 4px;
+  border: 1px solid var(--subtletext);
+  background: var(--light);
 }
 
 .advantage-title {
@@ -217,6 +261,8 @@ button {
   letter-spacing: 0.02em;
   color: var(--text);
 }
+
+/* --------------- TEAM-------------- */
 
 .team-section {
   background-color: #f4f4fd;
@@ -267,7 +313,37 @@ button {
   letter-spacing: 0.02em;
   color: var(--text);
   text-align: center;
+  margin-bottom: 8px;
 }
+
+.social-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-link:hover,
+.social-link:focus {
+  background-color: #404bbf;
+}
+
+.social-link-item {
+  fill: #f4f4fd;
+}
+
+/* --------------- PORTFOLIO-------------- */
 
 .portfolio-title {
   text-align: center;
@@ -285,6 +361,24 @@ button {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+}
+
+.box-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  padding: 40px 32px;
+  background-color: #4d5ae5;
+  color: #f4f4fd;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-information {
@@ -311,9 +405,19 @@ button {
   text-align: center;
 }
 
-.page-footer {
+/* --------------- FOOTER-------------- */
+
+.footer {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+
+.footer-container {
+  display: flex;
+}
+
+.footer-text-container {
+  margin-right: 120px;
 }
 
 .logo-footer {
@@ -338,4 +442,42 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   max-width: 264px;
+}
+
+.social-media-title {
+  color: #ffffff;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.footer-social-media-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary-brand);
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-list-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-icon {
+  fill: #f4f4fd;
+}
+
+.footer-link:hover,
+.footer-link:focus {
+  background-color: #31d0aa;
 }
