--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,8 @@ button {
   padding-top: 24px;
   padding-bottom: 24px;
   border-bottom: 1px solid var(--accent);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .container {
@@ -93,6 +95,7 @@ button {
   color: var(--primary-brand);
   text-transform: uppercase;
   margin-right: 76px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-logo .accent {
@@ -111,6 +114,7 @@ button {
   color: var(--dark);
   padding: 24px 0;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-link:hover,
@@ -148,6 +152,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contacts-link:hover,
@@ -203,6 +208,7 @@ button {
   border-radius: 4px;
   margin-top: 48px;
   min-width: 169px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -244,6 +250,7 @@ button {
   border-radius: 4px;
   border: 1px solid var(--subtletext);
   background: var(--light);
+  height: 112px;
 }
 
 .advantage-title {
@@ -331,7 +338,7 @@ button {
   height: 40px;
   border-radius: 50%;
   background-color: #4d5ae5;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
@@ -379,6 +386,18 @@ button {
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.portfolio-link {
+  box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-link:hover {
+  transform: translateY(0%);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .project-information {
@@ -414,6 +433,7 @@ button {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
 
 .footer-text-container {
