--- a/css/styles.css
+++ b/css/styles.css
@@ -390,14 +390,12 @@ button {
   letter-spacing: 0.02em;
 }
 
-.portfolio-link {
-  box-shadow: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.box-overlay:hover .overlay {
+  transform: translateY(0%);
 }
 
-.portfolio-link:hover {
-  transform: translateY(0%);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.portfolio-link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .project-information {
