--- a/css/styles.css
+++ b/css/styles.css
@@ -394,7 +394,7 @@ button {
   transform: translateY(0%);
 }
 
-.portfolio-link {
+.portfolio-link:hover {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
