--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,7 @@ button {
   letter-spacing: 0.02em;
 }
 
-.box-overlay:hover .overlay {
+.portfolio-link:hover .overlay {
   transform: translateY(0%);
 }
 
@@ -415,7 +415,6 @@ button {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--dark);
-  text-align: center;
   margin-bottom: 8px;
 }
 
@@ -424,7 +423,6 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text);
-  text-align: center;
 }
 
 /* --------------- FOOTER-------------- */
