create html css

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,8 +62,6 @@ button {
 /* --------------- HEADER-------------- */
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
   border-bottom: 1px solid var(--accent);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -113,6 +111,7 @@ button {
   letter-spacing: 0.02em;
   color: var(--dark);
   padding: 24px 0;
+  display: block;
   position: relative;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
